# RoboStats_Lab1

./: .gitignore  CMakeLists.txt  README  RunTrials.sh
app/: CMakeLists.txt  RunFilter.cpp
config/: Map1_DenseHighConfidence.xml  Map1_DenseHighConfidenceVariance.xml  Map1_HighConfidence.xml  Map1_HighConfidence_FewerParticles.xml  Map1_Standard.xml  Map4_DenseHighConfidence.xml  Map4_DenseHighConfidenceVariance.xml  Map4_HighConfidence.xml  Map4_Standard.xml  TestConfig.xml  TestConfig_cool_robot4.txt
include/rspf/: DefaultTransitionModel.h  Dummy.h  FilterVisualizer.h  LaserSensorModel.h  LowVarianceResampler.h  Map.h  NaiveResampler.h  Parameterized.h  Particle.h  ParticleFilter.h  PoseSE2.h  RandomDistributions.h  Resampler.h  RobotLogReader.h  SensorModel.h  StaticTransitionModel.h  SynchronizationPrimitives.h  Timer.h  TransitionModel.h  WallSensorModel.h  WorkerPool.h
src/: CMakeLists.txt  DefaultTransitionModel.cpp  Dummy.cpp  FilterVisualizer.cpp  LaserSensorModel.cpp  LowVarianceResampler.cpp  Map.cpp  NaiveResampler.cpp  Parameterized.cpp  Particle.cpp  ParticleFilter.cpp  PoseSE2.cpp  RandomDistributions.cpp  Resampler.cpp  RobotLogReader.cpp  SensorModel.cpp  StaticTransitionModel.cpp  SynchronizationPrimitives.cpp  Timer.cpp  TransitionModel.cpp  WallSensorModel.cpp  WorkerPool.cpp
